# yolov5-deepsort-libtorch

./: CMakeLists.txt  README.md  run.sh
detect/: CMakeLists.txt
detect/include/: detector.h
detect/src/: detector.cpp
module/: CMakeLists.txt
module/include/: DeepSORT.h  Track.h
module/src/: DeepSORT.cpp  KalmanTracker.h  TrackerManager.h  extra.cpp  extra.h
process/: CMakeLists.txt
process/include/: util.h
process/src/: main.cpp
